Visualization of bike sharing data as a time series

--- a/analysis-and-visualization-for-bike-sharing.ipynb
+++ b/analysis-and-visualization-for-bike-sharing.ipynb
@@ -2794,6 +2794,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4. Visualization of bike sharing data as a time series"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2832,14 +2839,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(13,7))\n",
-    "ax2 = ax.twinx()\n",
-    "ax.bar(rent_temp_df[\"date_\"], rent_temp_df[\"bikes_rental\"], color=(190/255,190/255,190/255,0.7), label='Liczba wypożyczonych rowerów')\n",
-    "ax2.plot(rent_temp_df[\"date_\"], rent_temp_df[\"temperature\"], color='green', label='Średnia temperatura powietrza')\n",
-    "ax.set_ylabel(\"Liczba wypożyczonych rowerów\", fontsize='14')\n",
-    "ax2.set_ylabel(\"Średnia temperatura powietrza\", fontsize='14')\n",
-    "ax.legend(loc='upper left')\n",
-    "ax2.legend(loc='upper right')"
+    "rent_temp_df = pd.DataFrame(tot_rent)\n",
+    "rent_temp_df = rent_temp_df.reset_index()\n",
+    "rent_temp_df = rent_temp_df.rename(columns={0: \"bikes_rental\"})"
    ]
   },
   {
@@ -2848,7 +2850,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "warsaw_bikes_rent = warsaw_bikes_rent.rename(columns={\"_date\": \"hour\"})"
+    "fig, ax = plt.subplots(figsize=(13,7))\n",
+    "ax2 = ax.twinx()\n",
+    "ax.bar(rent_temp_df[\"date_\"], rent_temp_df[\"bikes_rental\"], color=(190/255,190/255,190/255,0.7), label='Liczba wypożyczonych rowerów')\n",
+    "ax2.plot(rent_temp_df[\"date_\"], rent_temp_df[\"temperature\"], color='green', label='Średnia temperatura powietrza')\n",
+    "ax.set_ylabel(\"Liczba wypożyczonych rowerów\", fontsize='14')\n",
+    "ax2.set_ylabel(\"Średnia temperatura powietrza\", fontsize='14')\n",
+    "ax.legend(loc='upper left')\n",
+    "ax2.legend(loc='upper right')\n"
    ]
   },
   {
@@ -2859,92 +2868,6 @@
    "source": [
     "hourly_rent = warsaw_bikes_rent.set_index('name').groupby([ 'name', 'hour', 'weekday']).agg({'temperature':np.mean, 'bikes_rental':np.sum})\n",
     "hourly_rent_ = hourly_rent.pivot_table(index='name', columns=['hour', 'temperature', 'weekday'], values='bikes_rental') \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sort_rent_df = rent_bikes.transpose()\n",
-    "sort_rent_df = sort_rent_df.reset_index().rename_axis(None, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sort_rent_df = sort_rent_df.iloc[:, 3:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# posortowanie stacji od najwiekszej mediany wypożyczeń rowerów w ciągu dnia\n",
-    "meds = sort_rent_df.median().sort_values(ascending=True)\n",
-    "sort_rent_df = sort_rent_df[meds.index]\n",
-    "sort_rent_df.boxplot(vert=False, figsize=(12,100))\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# wyodrebnienie ze zbioru danych informacji o stacjach, które mają w nazwie \"Metro\"\n",
-    "metro_bs_df = bikes_df.reset_index()\n",
-    "metro_bs_df = metro_bs_df[metro_bs_df.name.str.contains(\"Metro\")]\n",
-    "metro_df = metro_bs_df.pivot_table(index='name', columns=['date_', 'temperature', 'rainfall'], values='bikes_rental')\n",
-    "sort_rent_ = metro_df.transpose()\n",
-    "sort_rent_ = sort_rent_.reset_index().rename_axis(None, axis=1)\n",
-    "sort_rent_ = sort_rent_.iloc[:, 3:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# posortowanie stacji rowerowych przy metrze od najwiekszej mediany wypożyczeń\n",
-    "meds_metro = sort_rent_.median().sort_values(ascending=True)\n",
-    "sort_rent_ = sort_rent_[meds_metro.index]\n",
-    "sort_rent_.boxplot(vert=False, figsize=(10,18))\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# najbardziej popularne stacje rowerowe w poszczególnych godzinach\n",
-    "df_hourly = warsaw_bikes_rent.groupby(['hour', 'name']).bikes_rental.sum().reset_index()\n",
-    "df_hourly = df_hourly.groupby([pd.to_datetime(df_hourly['hour']).dt.hour, 'name'])['bikes_rental'].median()\n",
-    "df_hourly.loc[df_hourly.groupby(level=0).idxmax()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# najbardziej popularne stacje rowerowe w poszczególnych dniach tygodnia\n",
-    "df_week = warsaw_bikes_rent.groupby(['date_', 'name']).bikes_rental.sum().reset_index()\n",
-    "df_week = df_week.rename(columns = {\"date_\": \"day_of_week\"})\n",
-    "df_week = df_week.groupby([pd.to_datetime(df_week['day_of_week']).dt.dayofweek ,'name'])['bikes_rental'].median()\n",
-    "df_week.loc[df_week.groupby(level=0).idxmax()]"
    ]
   }
  ],
