--- a/analysis-and-visualization-for-bike-sharing.ipynb
+++ b/analysis-and-visualization-for-bike-sharing.ipynb
@@ -1329,6 +1329,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# heatmapa ilości wypożyczonych rowerów w kolejnych dniach dla poszczególnych stacji rowerowych w Warszawie\n",
+    "plt.figure(figsize=(12, 120))\n",
+    "sns.heatmap(df_ac, cmap=\"YlGnBu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ilość wypożyczonych rowerów na stacji 'Sanguszki - Wybrzeże Gdańskie' w ostatnich dniach marca\n",
+    "df_ac.iloc[df_ac.index == 'Sanguszki - Wybrzeże Gdańskie', 15:30] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ilość wypożyczonych rowerów na stacji 'Centrum Nauki Kopernik' w ostatnich dniach marca\n",
+    "df_ac.iloc[df_ac.index == 'Centrum Nauki Kopernik', 15:30]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 116,
    "metadata": {},
    "outputs": [],
@@ -2093,6 +2159,61 @@
     "# wyświetla mapę Warszawy z lokalizacją 380 stacji rowerowych\n",
     "show(p)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def label_race (row):\n",
+    "    if row['bike_racks'] <20:\n",
+    "        return 'small'\n",
+    "    if row['bike_racks'] >= 20:\n",
+    "        return 'big'\n",
+    "        \n",
+    "bikes_station_df_.apply (lambda row: label_race(row), axis=1)\n",
+    "\n",
+    "bikes_station_df_['size_'] = bikes_station_df_.apply (lambda row: label_race(row), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_bikes_station = bikes_station_df_[bikes_station_df_.size_ == 'small']\n",
+    "big_bikes_station = bikes_station_df_[bikes_station_df_.size_ == 'big']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
