--- a/analysis-and-visualization-for-bike-sharing.ipynb
+++ b/analysis-and-visualization-for-bike-sharing.ipynb
@@ -1346,37 +1346,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# heatmapa ilości wypożyczonych rowerów w kolejnych dniach dla poszczególnych stacji rowerowych w Warszawie\n",
-    "plt.figure(figsize=(12, 120))\n",
-    "sns.heatmap(df_ac, cmap=\"YlGnBu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ilość wypożyczonych rowerów na stacji 'Sanguszki - Wybrzeże Gdańskie' w ostatnich dniach marca\n",
-    "df_ac.iloc[df_ac.index == 'Sanguszki - Wybrzeże Gdańskie', 15:30] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ilość wypożyczonych rowerów na stacji 'Centrum Nauki Kopernik' w ostatnich dniach marca\n",
-    "df_ac.iloc[df_ac.index == 'Centrum Nauki Kopernik', 15:30]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -2206,7 +2175,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "output_file(\"gmapa.html\")\n",
+    "\n",
+    "map_options = GMapOptions(lat=52.2, lng=21, map_type=\"roadmap\", zoom=11)\n",
+    "\n",
+    "p = gmap(\"AIzaSyAJ6lACZs4QJqOS_xE2uumL_QsEJT_7CUM\", map_options, title=\"Warszawa\")\n",
+    "\n",
+    "small_ = ColumnDataSource(\n",
+    "    data=dict(\n",
+    "        lat=small_bikes_station.lat.tolist(),\n",
+    "        lon=small_bikes_station.lng.tolist()\n",
+    "    )\n",
+    ")\n",
+    "big_ = ColumnDataSource(\n",
+    "    data=dict(\n",
+    "        lat=big_bikes_station.lat.tolist(),\n",
+    "        lon=big_bikes_station.lng.tolist()\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# wyświetla mapę Warszawy z podziałem stacji rowerowych\n",
+    "p.circle(x=\"lon\", y=\"lat\", size=8, fill_color=\"blue\", fill_alpha=0.8, source=small_, legend_label=\"Małe stacje rowerowe\")\n",
+    "p.circle(x=\"lon\", y=\"lat\", size=8, fill_color=\"red\", fill_alpha=0.8, source=big_, legend_label=\"Duże stacje rowerowe\")\n",
+    "\n",
+    "show(p)"
+   ]
   },
   {
    "cell_type": "code",
