--- a/analysis-and-visualization-for-bike-sharing.ipynb
+++ b/analysis-and-visualization-for-bike-sharing.ipynb
@@ -2137,79 +2137,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def label_race (row):\n",
-    "    if row['bike_racks'] <20:\n",
-    "        return 'small'\n",
-    "    if row['bike_racks'] >= 20:\n",
-    "        return 'big'\n",
-    "        \n",
-    "bikes_station_df_.apply (lambda row: label_race(row), axis=1)\n",
-    "\n",
-    "bikes_station_df_['size_'] = bikes_station_df_.apply (lambda row: label_race(row), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "small_bikes_station = bikes_station_df_[bikes_station_df_.size_ == 'small']\n",
-    "big_bikes_station = bikes_station_df_[bikes_station_df_.size_ == 'big']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_file(\"gmapa.html\")\n",
-    "\n",
-    "map_options = GMapOptions(lat=52.2, lng=21, map_type=\"roadmap\", zoom=11)\n",
-    "\n",
-    "p = gmap(\"AIzaSyAJ6lACZs4QJqOS_xE2uumL_QsEJT_7CUM\", map_options, title=\"Warszawa\")\n",
-    "\n",
-    "small_ = ColumnDataSource(\n",
-    "    data=dict(\n",
-    "        lat=small_bikes_station.lat.tolist(),\n",
-    "        lon=small_bikes_station.lng.tolist()\n",
-    "    )\n",
-    ")\n",
-    "big_ = ColumnDataSource(\n",
-    "    data=dict(\n",
-    "        lat=big_bikes_station.lat.tolist(),\n",
-    "        lon=big_bikes_station.lng.tolist()\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "# wyświetla mapę Warszawy z podziałem stacji rowerowych\n",
-    "p.circle(x=\"lon\", y=\"lat\", size=8, fill_color=\"blue\", fill_alpha=0.8, source=small_, legend_label=\"Małe stacje rowerowe\")\n",
-    "p.circle(x=\"lon\", y=\"lat\", size=8, fill_color=\"red\", fill_alpha=0.8, source=big_, legend_label=\"Duże stacje rowerowe\")\n",
-    "\n",
-    "show(p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2333,8 +2260,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "warsaw_bikes_rent = warsaw_bikes_rent.rename(columns={\"_date\": \"hour\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hourly_rent = warsaw_bikes_rent.set_index('name').groupby([ 'name', 'hour', 'weekday']).agg({'temperature':np.mean, 'bikes_rental':np.sum})\n",
     "hourly_rent_ = hourly_rent.pivot_table(index='name', columns=['hour', 'temperature', 'weekday'], values='bikes_rental') \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "warsaw_bikes_rent = warsaw_bikes_rent.rename(columns={\"_date\": \"hour\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tot_hour_rent = hourly_rent_.loc[df_ac.index!='name'].sum() # suma wypożyczonych rowerów w poszczególnych godzinach każdego dnia badanego okresu\n",
+    "rent_hour_df = pd.DataFrame(tot_hour_rent)\n",
+    "rent_hour_df = rent_hour_df.reset_index()\n",
+    "rent_hour_df = rent_hour_df.rename(columns={0: \"bikes_rental\"})"
    ]
   }
  ],
