Visualization of the number of bikes rented depending on the day of the week and hour

--- a/analysis-and-visualization-for-bike-sharing.ipynb
+++ b/analysis-and-visualization-for-bike-sharing.ipynb
@@ -2209,7 +2209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# obliczenie sumy wypozyczeń rowerów w poszczególnych dniach\n",
+    "# the sum of bike rentals on individual days\n",
     "total_rent = rent_bikes.copy()\n",
     "total_ = total_rent.transpose()\n",
     "total_[\"total\"] = total_rent[0:].sum()\n",
@@ -2222,7 +2222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# suma wypożyczonych rowerów w poszczególncyh dniach (ramka lepiej czytelna niż ta wyżej)\n",
+    "# the sum of rented bikes on individual days (the dataframe is better readable than the one above)\n",
     "tot_rent = rent_bikes.loc[rent_bikes.index!='name'].sum()\n",
     "tot_rent.sort_values(ascending=False)"
    ]
@@ -2246,10 +2246,10 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(13,7))\n",
     "ax2 = ax.twinx()\n",
-    "ax.bar(rent_temp_df[\"date_\"], rent_temp_df[\"bikes_rental\"], color=(190/255,190/255,190/255,0.7), label='Liczba wypożyczonych rowerów')\n",
-    "ax2.plot(rent_temp_df[\"date_\"], rent_temp_df[\"temperature\"], color='green', label='Średnia temperatura powietrza')\n",
-    "ax.set_ylabel(\"Liczba wypożyczonych rowerów\", fontsize='14')\n",
-    "ax2.set_ylabel(\"Średnia temperatura powietrza\", fontsize='14')\n",
+    "ax.bar(rent_temp_df[\"date_\"], rent_temp_df[\"bikes_rental\"], color=(190/255,190/255,190/255,0.7), label='Number of bike rentals')\n",
+    "ax2.plot(rent_temp_df[\"date_\"], rent_temp_df[\"temperature\"], color='green', label='Average temperature')\n",
+    "ax.set_ylabel(\"Number of bike rentals\", fontsize='14')\n",
+    "ax2.set_ylabel(\"Average temperature\", fontsize='14')\n",
     "ax.legend(loc='upper left')\n",
     "ax2.legend(loc='upper right')\n"
    ]
@@ -2288,10 +2288,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tot_hour_rent = hourly_rent_.loc[df_ac.index!='name'].sum() # suma wypożyczonych rowerów w poszczególnych godzinach każdego dnia badanego okresu\n",
+    "tot_hour_rent = hourly_rent_.loc[df_ac.index!='name'].sum() # the sum of bikes rented in each hour of each day of the analyzed period\n",
     "rent_hour_df = pd.DataFrame(tot_hour_rent)\n",
     "rent_hour_df = rent_hour_df.reset_index()\n",
     "rent_hour_df = rent_hour_df.rename(columns={0: \"bikes_rental\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hour_weekday_rent = rent_hour_df.pivot_table(index=rent_hour_df['hour'].dt.hour, \n",
+    "                     columns='weekday', \n",
+    "                     values='bikes_rental', \n",
+    "                     aggfunc='mean')\n",
+    "hour_weekday_rent.plot(figsize=(16,8)).set(title = \"Graph of the dependence of the number of rented bikes depending on the day of the week and time\", ylabel = 'Liczba wypożyczonych rowerów', xlabel = 'Godzina')\n",
+    "plt.show()"
    ]
   }
  ],
