--- a/analysis-and-visualization-for-bike-sharing.ipynb
+++ b/analysis-and-visualization-for-bike-sharing.ipynb
@@ -1405,7 +1405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_df = df.groupby(['date_normalize']).agg({'temperature':np.mean})  # obliczenie średniej temp. powietrza dla każdego dnia\n",
+    "temp_df = df.groupby(['date_normalize']).agg({'temperature':np.mean})  # calculation of the average air temperature for each day\n",
     "temp_df = temp_df.reset_index() "
    ]
   },
@@ -1416,7 +1416,7 @@
    "outputs": [],
    "source": [
     "rainfall_all['date_normalize'] = rainfall_all.date.dt.date\n",
-    "rain_df = rainfall_all.groupby(['date_normalize']).agg({'rainfall':np.sum}) # obliczenie sumy opadów dla każdego dnia\n",
+    "rain_df = rainfall_all.groupby(['date_normalize']).agg({'rainfall':np.sum}) # # calculation of total rainfall for each day\n",
     "rain_df = rain_df.reset_index()"
    ]
   },
@@ -1426,7 +1426,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rain_temp_df = pd.concat([temp_df, rain_df['rainfall']], axis = 1)  # złączenie wartości temp. z ilością opadów deszczu"
+    "rain_temp_df = pd.concat([temp_df, rain_df['rainfall']], axis = 1)  # combine the temperature value with the amount of rainfall"
    ]
   },
   {
@@ -1448,12 +1448,12 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(13,7))\n",
     "ax2 = ax.twinx()\n",
-    "ax.bar(rain_temp_df[\"date_normalize\"], rain_temp_df[\"rainfall\"], color=(190/255,190/255,190/255,0.7), label='Suma opadów deszczu')\n",
-    "ax2.plot(rain_temp_df[\"date_normalize\"], rain_temp_df[\"temperature\"], color='blue', label='Średnia temperatura powietrza')\n",
+    "ax.bar(rain_temp_df[\"date_normalize\"], rain_temp_df[\"rainfall\"], color=(190/255,190/255,190/255,0.7), label='Total rainfall')\n",
+    "ax2.plot(rain_temp_df[\"date_normalize\"], rain_temp_df[\"temperature\"], color='blue', label='Average temperature')\n",
     "ax.set_xticklabels(rain_temp_df[\"date_normalize\"][::1], rotation=80, fontsize='14')\n",
-    "ax.set_ylabel(\"Suma opadów deszczu\", fontsize='14')\n",
-    "ax2.set_ylabel(\"Średnia temperatura powietrza\", fontsize='14')\n",
-    "ax2.set_title(\"Wykres zmiany średniej temperatury powietrza i dobowej ilości opadów deszczu w okresie 04.03-01.04.2018\")\n",
+    "ax.set_ylabel(\"Total rainfall\", fontsize='14')\n",
+    "ax2.set_ylabel(\"Average temperature\", fontsize='14')\n",
+    "ax2.set_title(\"Graph of changes in the average air temperature and the daily amount of rainfall in the period 03/04 - 04/04/2018\")\n",
     "ax.legend(loc='upper right')\n",
     "ax2.legend(loc='upper left')\n",
     "plt.show()"
@@ -1482,7 +1482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bikes_station_df = bikes_station_df.fillna(method='ffill') # zastąpienie NaNów wartością odnotowaną w poprzednim okresie"
+    "bikes_station_df = bikes_station_df.fillna(method='ffill') # replacing NaNs with the value noted in the previous period"
    ]
   },
   {
@@ -1491,7 +1491,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bikes_station_df_ = pd.DataFrame(bikes_station_df.iloc[28, :]).reset_index() # do analizy wielkości stacji pobrane są dane z ostatniego dnia\n",
+    "bikes_station_df_ = pd.DataFrame(bikes_station_df.iloc[28, :]).reset_index() # data from the last day are collected to analyze the size of the stations\n",
     "bikes_station_df_ = bikes_station_df_.rename(columns={bikes_station_df_.columns[3]: \"bike_racks\"})\n",
     "bikes_station_df_['bike_racks'] = bikes_station_df_['bike_racks'].astype(int)"
    ]
@@ -1515,7 +1515,7 @@
    "source": [
     "plt.figure(figsize=(13,7))\n",
     "sns.set(font_scale=1.4, style=\"whitegrid\")\n",
-    "sns.distplot(bikes_station_df_['bike_racks'], kde = False, bins = 30, color = '#eb6c6a').set(title = 'Stacje rowerowe w Warszawie', xlabel = 'Ilosc stojaków', ylabel = 'Ilosc stacji')\n",
+    "sns.distplot(bikes_station_df_['bike_racks'], kde = False, bins = 30, color = '#eb6c6a').set(title = 'Bikes stations in Warsaw', xlabel = 'Ilosc stojaków', ylabel = 'Ilosc stacji')\n",
     "plt.show()"
    ]
   },
@@ -2109,13 +2109,13 @@
     "map_options = GMapOptions(lat=52.2, lng=21, map_type=\"roadmap\", zoom=11)\n",
     "\n",
     "\"\"\"\n",
-    "Aby GMap działał, Google wymaga uzyskania i włączenia klucza API ze strony:\n",
+    "For GMap to work, Google requires that you obtain and enable an API key from:\n",
     "\n",
     "https://developers.google.com/maps/documentation/javascript/get-api-key\n",
     "\n",
-    "Trzeba poniższy klucz API zamienić na swój osobisty\n",
+    "Change the API key below into your personal one\n",
     "\"\"\"\n",
-    "p = gmap(\"AIzaSyAJ6lACZs4QJqOS_xE2uumL_QsEJT_7CUM\", map_options, title=\"Warszawa\")\n",
+    "p = gmap(\"AIzaSyAJ6lACZs4QJqOS_xE2uumL_QsEJT_7CUM\", map_options, title=\"Warsaw\")\n",
     "\n",
     "source = ColumnDataSource(\n",
     "    data=dict(\n",
@@ -2178,7 +2178,7 @@
     "\n",
     "marker_cluster = MarkerCluster().add_to(my_map)\n",
     "for ind in bikes_station_df_.index:     \n",
-    "    tooltip_txt = bikes_station_df_['name'][ind] + '<br>Liczba stojakow:' + str(bikes_station_df_['bike_racks'][ind])\n",
+    "    tooltip_txt = bikes_station_df_['name'][ind] + '<br>Number of bike stands:' + str(bikes_station_df_['bike_racks'][ind])\n",
     "    \n",
     "     \n",
     "    folium.Marker([float(bikes_station_df_['lat'][ind]), float(bikes_station_df_['lng'][ind])],\n",
@@ -2279,15 +2279,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "warsaw_bikes_rent = warsaw_bikes_rent.rename(columns={\"_date\": \"hour\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "tot_hour_rent = hourly_rent_.loc[df_ac.index!='name'].sum() # the sum of bikes rented in each hour of each day of the analyzed period\n",
     "rent_hour_df = pd.DataFrame(tot_hour_rent)\n",
     "rent_hour_df = rent_hour_df.reset_index()\n",
@@ -2306,6 +2297,17 @@
     "                     aggfunc='mean')\n",
     "hour_weekday_rent.plot(figsize=(16,8)).set(title = \"Graph of the dependence of the number of rented bikes depending on the day of the week and time\", ylabel = 'Liczba wypożyczonych rowerów', xlabel = 'Godzina')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# table with average bike rentals for individual days of the week and hours\n",
+    "hour_weekday_rent.style.background_gradient(cmap='coolwarm', axis=None)\n",
+    "hour_weekday_rent.style.background_gradient(cmap='coolwarm').set_precision(3)"
    ]
   }
  ],
