Exploratory data analysis
Analysis of the popularity of bike stations

--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -2345,6 +2345,31 @@
     "rain_temp_cor.style.background_gradient(cmap='coolwarm', axis=None)\n",
     "rain_temp_cor.style.background_gradient(cmap='coolwarm').set_precision(2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(13,7))\n",
+    "plt.plot(\"temperature\", \"bikes_rental\", data=rent_hour_df, linestyle='none', marker='o')\n",
+    "plt.xlabel('Average temperature', fontsize='14', \n",
+    "           horizontalalignment='center')\n",
+    "plt.ylabel('Number of bike rentals', fontsize='14', \n",
+    "           horizontalalignment='center')\n",
+    "plt.title('Number of bike rentals vs. Average temperature per hour')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rent_temp_df"
+   ]
   }
  ],
  "metadata": {
