Exploratory data analysis
Analysis of the popularity of bike stations

--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -2370,6 +2370,38 @@
    "source": [
     "rent_temp_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sort_rent_df = sort_rent_df.iloc[:, 3:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# posortowanie stacji od najwiekszej mediany wypożyczeń rowerów w ciągu dnia\n",
+    "meds = sort_rent_df.median().sort_values(ascending=True)\n",
+    "sort_rent_df = sort_rent_df[meds.index]\n",
+    "sort_rent_df.boxplot(vert=False, figsize=(12,100))\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meds.sort_values(ascending = False).head(15)"
+   ]
   }
  ],
  "metadata": {
