--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -2725,6 +2725,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [
@@ -2763,7 +2770,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "start_time = time.time()\n",
+    "bike_track = (df.set_index(['name', 'date', 'uid', 'lat', 'lng'])\n",
+    "            ['bike_numbers'].str.split(',', expand=True)\n",
+    "            .stack()\n",
+    "            .reset_index(name='bike_numbers')\n",
+    "            .drop('level_5',1))\n",
+    "\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_track['bike_numbers'] = bike_track['bike_numbers'].replace('?', np.nan) \n",
+    "bike_track.dropna(subset=['bike_numbers'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_track = bike_track.sort_values(['bike_number', 'start_time'], ascending=[True, True])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_track['end_time'] = bike_track.iloc[0:, 1]\n",
+    "bike_track['end_time'] = bike_track['end_time'].shift(-1)\n",
+    "bike_track['station B'] = bike_track.iloc[0:, 0] \n",
+    "bike_track['station B'] = bike_track['station B'].shift(-1)\n",
+    "bike_track['ID_B'] = bike_track.iloc[0:, 2] \n",
+    "bike_track['ID_B'] = bike_track['ID_B'].shift(-1)\n",
+    "bike_track['lat_B'] = bike_track.iloc[0:, 3] \n",
+    "bike_track['lat_B'] = bike_track['lat_B'].shift(-1)\n",
+    "bike_track['lng_B'] = bike_track.iloc[0:, 4] \n",
+    "bike_track['lng_B'] = bike_track['lng_B'].shift(-1)"
+   ]
   }
  ],
  "metadata": {
