--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -2771,15 +2771,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_time = time.time()\n",
-    "bike_track = (df.set_index(['name', 'date', 'uid', 'lat', 'lng'])\n",
-    "            ['bike_numbers'].str.split(',', expand=True)\n",
-    "            .stack()\n",
-    "            .reset_index(name='bike_numbers')\n",
-    "            .drop('level_5',1))\n",
-    "\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+    "# wyodrebnienie ze zbioru danych informacji o stacjach, które mają w nazwie \"Metro\"\n",
+    "metro_bs_df = bikes_df.reset_index()\n",
+    "metro_bs_df = metro_bs_df[metro_bs_df.name.str.contains(\"Metro\")]\n",
+    "metro_df = metro_bs_df.pivot_table(index='name', columns=['date_', 'temperature', 'rainfall'], values='bikes_rental')\n",
+    "sort_rent_ = metro_df.transpose()\n",
+    "sort_rent_ = sort_rent_.reset_index().rename_axis(None, axis=1)\n",
+    "sort_rent_ = sort_rent_.iloc[:, 3:]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2814,18 +2820,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "bike_track['end_time'] = bike_track.iloc[0:, 1]\n",
-    "bike_track['end_time'] = bike_track['end_time'].shift(-1)\n",
-    "bike_track['station B'] = bike_track.iloc[0:, 0] \n",
-    "bike_track['station B'] = bike_track['station B'].shift(-1)\n",
-    "bike_track['ID_B'] = bike_track.iloc[0:, 2] \n",
-    "bike_track['ID_B'] = bike_track['ID_B'].shift(-1)\n",
-    "bike_track['lat_B'] = bike_track.iloc[0:, 3] \n",
-    "bike_track['lat_B'] = bike_track['lat_B'].shift(-1)\n",
-    "bike_track['lng_B'] = bike_track.iloc[0:, 4] \n",
-    "bike_track['lng_B'] = bike_track['lng_B'].shift(-1)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
