--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -2785,6 +2785,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# posortowanie stacji rowerowych przy metrze od najwiekszej mediany wypożyczeń\n",
+    "meds_metro = sort_rent_.median().sort_values(ascending=True)\n",
+    "sort_rent_ = sort_rent_[meds_metro.index]\n",
+    "sort_rent_.boxplot(vert=False, figsize=(10,18))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# najbardziej popularne stacje rowerowe w poszczególnych godzinach\n",
+    "df_hourly = warsaw_bikes_rent.groupby(['hour', 'name']).bikes_rental.sum().reset_index()\n",
+    "df_hourly = df_hourly.groupby([pd.to_datetime(df_hourly['hour']).dt.hour, 'name'])['bikes_rental'].median()\n",
+    "df_hourly.loc[df_hourly.groupby(level=0).idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -2820,7 +2852,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "start_time = time.time()\n",
+    "bike_track = (df.set_index(['name', 'date', 'uid', 'lat', 'lng'])\n",
+    "            ['bike_numbers'].str.split(',', expand=True)\n",
+    "            .stack()\n",
+    "            .reset_index(name='bike_numbers')\n",
+    "            .drop('level_5',1))\n",
+    "\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "routes = bike_track.groupby(['station A', 'bike_number', 'station B']).size().reset_index(name='count')"
+   ]
   }
  ],
  "metadata": {
