--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -2725,13 +2725,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [
@@ -2770,19 +2763,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# najbardziej popularne stacje rowerowe w poszczególnych dniach tygodnia\n",
-    "df_week = warsaw_bikes_rent.groupby(['date_', 'name']).bikes_rental.sum().reset_index()\n",
-    "df_week = df_week.rename(columns = {\"date_\": \"day_of_week\"})\n",
-    "df_week = df_week.groupby([pd.to_datetime(df_week['day_of_week']).dt.dayofweek ,'name'])['bikes_rental'].median()\n",
-    "df_week.loc[df_week.groupby(level=0).idxmax()]"
+    "# wyodrebnienie ze zbioru danych informacji o stacjach, które mają w nazwie \"Metro\"\n",
+    "metro_bs_df = bikes_df.reset_index()\n",
+    "metro_bs_df = metro_bs_df[metro_bs_df.name.str.contains(\"Metro\")]\n",
+    "metro_df = metro_bs_df.pivot_table(index='name', columns=['date_', 'temperature', 'rainfall'], values='bikes_rental')\n",
+    "sort_rent_ = metro_df.transpose()\n",
+    "sort_rent_ = sort_rent_.reset_index().rename_axis(None, axis=1)\n",
+    "sort_rent_ = sort_rent_.iloc[:, 3:]"
    ]
   },
   {
