--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -2803,6 +2803,75 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# najbardziej popularne stacje rowerowe w poszczególnych dniach tygodnia\n",
+    "df_week = warsaw_bikes_rent.groupby(['date_', 'name']).bikes_rental.sum().reset_index()\n",
+    "df_week = df_week.rename(columns = {\"date_\": \"day_of_week\"})\n",
+    "df_week = df_week.groupby([pd.to_datetime(df_week['day_of_week']).dt.dayofweek ,'name'])['bikes_rental'].median()\n",
+    "df_week.loc[df_week.groupby(level=0).idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop_hourly = pd.DataFrame(df_hourly)\n",
+    "most_pop_hourly = pop_hourly['bikes_rental'].groupby(level=0, group_keys=False)\n",
+    "most_pop_hourly.nlargest(2) # 2 najpopularniejsze stacje w każdej godzinie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bikes_station = pd.DataFrame(meds).reset_index()\n",
+    "bikes_station= bikes_station.rename(columns={\"index\": \"name\", 0: \"median\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(columns = ['date','year','month', 'day', 'hour', 'minute', 'rentBikes'])  \n",
+    "for fileName in fileList:\n",
+    "    if os.path.getsize(fileName) > 10000:\n",
+    "        with open(fileName, 'r') as json_file:\n",
+    "            data = json.load(json_file)\n",
+    "        df2 = pd.DataFrame([[\n",
+    "            fileName.split('\\\\')[2][0:13],\n",
+    "            fileName.split('\\\\')[2][0:4],\n",
+    "            fileName.split('\\\\')[2][4:6],\n",
+    "            fileName.split('\\\\')[2][6:8],\n",
+    "            fileName.split('\\\\')[2][9:11],\n",
+    "            fileName.split('\\\\')[2][11:13],\n",
+    "            int(data[0]['region_info']['set_point_bikes']) - int(data[0]['region_info'][\"available_bikes\"])\n",
+    "        ]], columns = ['date','year','month', 'day', 'hour', 'minute', 'rentBikes'])\n",
+    "        df = df.append(df2) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df[['weekDay', 'dayPart', 'temp', 'rain', 'wind', 'hour', 'prevRent', 'date', 'day']]\n",
+    "y = df['rentBikes']\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size = 0.20, random_state = 0)\n",
+    "x_train, x_valid, y_train, y_valid = train_test_split(x_train, y_train, test_size = 0.25, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -2811,34 +2880,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bike_track['bike_numbers'] = bike_track['bike_numbers'].replace('?', np.nan) \n",
-    "bike_track.dropna(subset=['bike_numbers'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bike_track = bike_track.sort_values(['bike_number', 'start_time'], ascending=[True, True])"
-   ]
   },
   {
    "cell_type": "code",
